--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Greetings from a sample Python app built with the Flask framework!</title>
+    <title>Greetings from a sample Python app built with the Celery distributed task queue!</title>
     <meta content='website' property='og:type'>
     <meta content='https://cdn.scalingo.com/homepage/assets/fb-33a6a93ddbf90bfdae57407481aa05a4.png' property='og:image'>
-    <meta content="Deploying your own Python/Flask app on Scalingo is as easy as pie: JUST CLICK THIS BUTTON! It will be up in less than 2 minutes!" property='og:description'>
+    <meta content="Deploying your own Python/Celery app on Scalingo is as easy as pie: JUST CLICK THIS BUTTON! It will be up in less than 2 minutes!" property='og:description'>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.min.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,500" rel="stylesheet">
     <style>
-      body { color: darkslateblue; font-family: 'Courier New', Courier, monospace; font-size: 1rem; line-height: 1.5; font-weight: 300; }
+      body { color: #373a3c; font-family: 'Roboto', sans-serif; font-size: 1rem; line-height: 1.5; font-weight: 300; }
       .h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
         color: inherit;
         font-family: inherit;
@@ -21,7 +21,7 @@
         margin-bottom: 1rem;
         margin-top: 0;
       }
-      a { color: darkturquoise; text-decoration: none; background-color: transparent; }
+      a { color: #0275d8; text-decoration: none; background-color: transparent; }
       a:focus, a:hover { color: #014c8c; text-decoration: underline; text-decoration: none; }
       a:focus { outline: thin dotted; outline-offset: -2px; }
       .container { margin: 0 auto; text-align: center; }
@@ -58,7 +58,7 @@
       .btn:active:focus, .btn:active:hover { background-color: #014682; border-color: #01315a; color: #fff; }
       .scalingo-logo { max-width: 100%; height: auto; width: 330px; }
       .heart-logo { margin: 0 20px; width:56px;position:relative; top:-18px; }
-      .tech-logo { width:100px;position:relative;top:7px; }
+      .tech-logo { width:56px;position:relative;top:-18px; }
       @media (min-width:768px){
         .container { width: 800px; }
         .one-liner { display: block; }
@@ -74,13 +74,24 @@
       <div class="love">
         <img class="scalingo-logo" alt="Scalingo" src="https://scalingo.com/logo-lightgrey.svg">
         <img class="heart-logo" alt="love" src="https://cdn.scalingo.com/documentation/heart.png">
-              <h1>Greetings from a sample Python app <br/> built with the Flask!</h1>
+        <svg xmlns="http://www.w3.org/2000/svg" class="tech-logo" viewBox="0 0 128 128"><path fill="#FFD845" d="M49.33 62h29.159C86.606 62 93 55.132 93 46.981V19.183c0-7.912-6.632-13.856-14.555-15.176-5.014-.835-10.195-1.215-15.187-1.191-4.99.023-9.612.448-13.805 1.191C37.098 6.188 35 10.758 35 19.183V30h29v4H23.776c-8.484 0-15.914 5.108-18.237 14.811-2.681 11.12-2.8 17.919 0 29.53C7.614 86.983 12.569 93 21.054 93H31V79.952C31 70.315 39.428 62 49.33 62zm-1.838-39.11c-3.026 0-5.478-2.479-5.478-5.545 0-3.079 2.451-5.581 5.478-5.581 3.015 0 5.479 2.502 5.479 5.581-.001 3.066-2.465 5.545-5.479 5.545zm74.789 25.921C120.183 40.363 116.178 34 107.682 34H97v12.981C97 57.031 88.206 65 78.489 65H49.33C41.342 65 35 72.326 35 80.326v27.8c0 7.91 6.745 12.564 14.462 14.834 9.242 2.717 17.994 3.208 29.051 0C85.862 120.831 93 116.549 93 108.126V97H64v-4h43.682c8.484 0 11.647-5.776 14.599-14.66 3.047-9.145 2.916-17.799 0-29.529zm-41.955 55.606c3.027 0 5.479 2.479 5.479 5.547 0 3.076-2.451 5.579-5.479 5.579-3.015 0-5.478-2.502-5.478-5.579 0-3.068 2.463-5.547 5.478-5.547z"/></svg>
+      </div>
+      <h1>Greetings from a sample Python app <br/> built with the Celery distributed task queue!</h1>
+
+      <h2> Celery returned: {{ celery.result }} </h2>
+
+      <form method="GET" action="/">
+        <label for="name"> Enter your name: </label>
+        <input type="text" name="name"/>
+        <input type="submit"/>
+      </form>
+
       <h2>
-        <span style="display:block;"><span class="one-liner">Deploying your own Python/Flask app on Scalingo</span> is as easy as pie:</span>
-        <a class="btn" href="https://my.scalingo.com/deploy?source=https://github.com/Scalingo/sample-python-flask">Just click this button!</a>
+        <span style="display:block;"><span class="one-liner">Deploying your own Python/Celery app on Scalingo</span> is as easy as pie:</span>
+        <a class="btn" href="https://my.scalingo.com/deploy?source=https://github.com/Scalingo/sample-python-celery">Just click this button!</a>
         <span style="display:block;">It will be up in less than 2 minutes!</span>
       </h2>
-      <p>The code of this sample lives <a href="https://github.com/Scalingo/sample-python-flask">on GitHub</a>. You can find <a href="http://samples.scalingo.com">more samples here</a>.</p>
+      <p>The code of this sample lives <a href="https://github.com/Scalingo/sample-python-celery">on GitHub</a>. You can find <a href="http://samples.scalingo.com">more samples here</a>.</p>
     </div>
     <footer>
       <div class="container">
@@ -92,4 +103,3 @@
     </footer>
   </body>
 </html>
-
