--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Greetings from a sample Python app built with the Celery distributed task queue!</title>
+    <title>Greetings from Sarah with the Celery distributed task queue!</title>
     <meta content='website' property='og:type'>
     <meta content='https://cdn.scalingo.com/homepage/assets/fb-33a6a93ddbf90bfdae57407481aa05a4.png' property='og:image'>
     <meta content="Deploying your own Python/Celery app on Scalingo is as easy as pie: JUST CLICK THIS BUTTON! It will be up in less than 2 minutes!" property='og:description'>
